; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/ulp/ipoib/extr_ipoib_netlink.c_ipoib_fill_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/ulp/ipoib/extr_ipoib_netlink.c_ipoib_fill_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.net_device = type { i32 }
%struct.ipoib_dev_priv = type { i32, i32 }

@IFLA_IPOIB_PKEY = common dso_local global i32 0, align 4
@IPOIB_FLAG_ADMIN_CM = common dso_local global i32 0, align 4
@IFLA_IPOIB_MODE = common dso_local global i32 0, align 4
@IPOIB_FLAG_UMCAST = common dso_local global i32 0, align 4
@IFLA_IPOIB_UMCAST = common dso_local global i32 0, align 4
@EMSGSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.net_device*)* @ipoib_fill_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ipoib_fill_info(%struct.sk_buff* %0, %struct.net_device* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.ipoib_dev_priv*, align 8
  %7 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.net_device* %1, %struct.net_device** %5, align 8
  %8 = load %struct.net_device*, %struct.net_device** %5, align 8
  %9 = call %struct.ipoib_dev_priv* @netdev_priv(%struct.net_device* %8)
  store %struct.ipoib_dev_priv* %9, %struct.ipoib_dev_priv** %6, align 8
  %10 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %11 = load i32, i32* @IFLA_IPOIB_PKEY, align 4
  %12 = load %struct.ipoib_dev_priv*, %struct.ipoib_dev_priv** %6, align 8
  %13 = getelementptr inbounds %struct.ipoib_dev_priv, %struct.ipoib_dev_priv* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @nla_put_u16(%struct.sk_buff* %10, i32 %11, i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  br label %41

18:                                               ; preds = %2
  %19 = load i32, i32* @IPOIB_FLAG_ADMIN_CM, align 4
  %20 = load %struct.ipoib_dev_priv*, %struct.ipoib_dev_priv** %6, align 8
  %21 = getelementptr inbounds %struct.ipoib_dev_priv, %struct.ipoib_dev_priv* %20, i32 0, i32 0
  %22 = call i32 @test_bit(i32 %19, i32* %21)
  store i32 %22, i32* %7, align 4
  %23 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %24 = load i32, i32* @IFLA_IPOIB_MODE, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i64 @nla_put_u16(%struct.sk_buff* %23, i32 %24, i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %18
  br label %41

29:                                               ; preds = %18
  %30 = load i32, i32* @IPOIB_FLAG_UMCAST, align 4
  %31 = load %struct.ipoib_dev_priv*, %struct.ipoib_dev_priv** %6, align 8
  %32 = getelementptr inbounds %struct.ipoib_dev_priv, %struct.ipoib_dev_priv* %31, i32 0, i32 0
  %33 = call i32 @test_bit(i32 %30, i32* %32)
  store i32 %33, i32* %7, align 4
  %34 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %35 = load i32, i32* @IFLA_IPOIB_UMCAST, align 4
  %36 = load i32, i32* %7, align 4
  %37 = call i64 @nla_put_u16(%struct.sk_buff* %34, i32 %35, i32 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %29
  br label %41

40:                                               ; preds = %29
  store i32 0, i32* %3, align 4
  br label %44

41:                                               ; preds = %39, %28, %17
  %42 = load i32, i32* @EMSGSIZE, align 4
  %43 = sub nsw i32 0, %42
  store i32 %43, i32* %3, align 4
  br label %44

44:                                               ; preds = %41, %40
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local %struct.ipoib_dev_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local i64 @nla_put_u16(%struct.sk_buff*, i32, i32) #1

declare dso_local i32 @test_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
